# tcv_eq

./: .gitignore  CMakeLists.txt  README.md  compile_net_forward.sh  compile_standalone.sh  compile_test.m  compile_test_old.m  convert2matlab.ipynb  create_ds.m  create_ds2.m  create_ds_old.m  create_net.py  create_test_shots.m  create_test_shots_lih.m  definitions.py  differentition.ipynb  eval_on_test_shots.ipynb  explore_liuqe.m  forward_test.m  good_shots.txt  ideas.md  inference.ipynb  interpolation.ipynb  lcfs.m  lih_comparison.m  load_test_shots.m  logbook_example.m  mg_train.ipynb  mg_train2.ipynb  net_forward  net_forward.cpp  net_forward_old1.cpp  net_forward_static.cpp  plt_settings.py  prepare_dataset.ipynb  prepare_dataset0.ipynb  prepare_dataset2.ipynb  prepare_dataset_old.ipynb  read_data.py  requirements.txt  (+17 more)
data/: good_shots.txt
docs/: Eleven_FBT_equilibria.m  Getting_started.m  Introduction.m  help_meqt.txt  help_tcvget.txt  lessons.md  meqt.md  tcvget.md
jobs/: install_packages.sh  prep_data.sh  test_job.sh  train_a40.sh  train_cpu.sh  train_rtx.sh
tcv_params/: grid.mat  vess.mat
